Fixed heading wrap for WIP projects.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1471,6 +1471,7 @@ ul {
   font-size: 1em;
   font-weight: 500;
   line-height: 1;
+  height: 100%;
 }
 
 .main-img__item {
